--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 	  <header id="header" class="fixed-top ">
 		<div class="container d-flex align-items-center justify-content-lg-between">
 	
-		  <h1 class="logo me-auto me-lg-0"><a href="index.html">Gp<span>.</span></a></h1>
+		  <h1 class="logo me-auto me-lg-0"><a href="index.html">QUIKCODE<span>.</span></a></h1>
 		  <!-- Uncomment below if you prefer to use an image logo -->
 		  <!-- <a href="index.html" class="logo me-auto me-lg-0"><img src="assets/img/logo.png" alt="" class="img-fluid"></a>-->
 	
@@ -56,23 +56,6 @@
 			  <li><a class="nav-link scrollto" href="#services">Services</a></li>
 			  <li><a class="nav-link scrollto " href="#portfolio">Portfolio</a></li>
 			  <li><a class="nav-link scrollto" href="#team">Team</a></li>
-			  <li class="dropdown"><a href="#"><span>Drop Down</span> <i class="bi bi-chevron-down"></i></a>
-				<ul>
-				  <li><a href="#">Drop Down 1</a></li>
-				  <li class="dropdown"><a href="#"><span>Deep Drop Down</span> <i class="bi bi-chevron-right"></i></a>
-					<ul>
-					  <li><a href="#">Deep Drop Down 1</a></li>
-					  <li><a href="#">Deep Drop Down 2</a></li>
-					  <li><a href="#">Deep Drop Down 3</a></li>
-					  <li><a href="#">Deep Drop Down 4</a></li>
-					  <li><a href="#">Deep Drop Down 5</a></li>
-					</ul>
-				  </li>
-				  <li><a href="#">Drop Down 2</a></li>
-				  <li><a href="#">Drop Down 3</a></li>
-				  <li><a href="#">Drop Down 4</a></li>
-				</ul>
-			  </li>
 			  <li><a class="nav-link scrollto" href="#contact">Contact</a></li>
 			</ul>
 			<i class="bi bi-list mobile-nav-toggle"></i>
@@ -95,31 +78,25 @@
         <div class="col-xl-2 col-md-4">
           <div class="icon-box">
             <i class="ri-store-line"></i>
-            <h3><a href="">Lorem Ipsum</a></h3>
+            <h3><a href="">POS System</a></h3>
           </div>
         </div>
         <div class="col-xl-2 col-md-4">
           <div class="icon-box">
             <i class="ri-bar-chart-box-line"></i>
-            <h3><a href="">Dolor Sitema</a></h3>
+            <h3><a href="">Web Apps</a></h3>
           </div>
         </div>
         <div class="col-xl-2 col-md-4">
           <div class="icon-box">
             <i class="ri-calendar-todo-line"></i>
-            <h3><a href="">Sedare Perspiciatis</a></h3>
+            <h3><a href="">Mobile Apps</a></h3>
           </div>
         </div>
         <div class="col-xl-2 col-md-4">
           <div class="icon-box">
             <i class="ri-paint-brush-line"></i>
-            <h3><a href="">Magni Dolores</a></h3>
-          </div>
-        </div>
-        <div class="col-xl-2 col-md-4">
-          <div class="icon-box">
-            <i class="ri-database-2-line"></i>
-            <h3><a href="">Nemos Enimade</a></h3>
+            <h3><a href="">Maintenance</a></h3>
           </div>
         </div>
       </div>
