--- a/index.html
+++ b/index.html
@@ -5,12 +5,12 @@
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-  <title>Gp Bootstrap Template - Index</title>
+  <title>QuikCode</title>
   <meta content="" name="description">
   <meta content="" name="keywords">
 
   <!-- Favicons -->
-  <link href="assets/img/favicon.png" rel="icon">
+  <link href="assets/img/logo1.png" rel="icon">
   <link href="assets/img/apple-touch-icon.png" rel="apple-touch-icon">
 
   <!-- Google Fonts -->
@@ -44,14 +44,13 @@
 	  <!-- ======= Header ======= -->
 	  <header id="header" class="fixed-top ">
 		<div class="container d-flex align-items-center justify-content-lg-between">
-	
-		<h1 class="logo me-auto me-lg-0"><a href="index.html">QUIKCODE<span>.</span></a></h1>
+
+		<h1 class="logo me-auto me-lg-0"><a href="index.html"><img src="assets/img/logo5.png" alt=""></a></h1>
 		  <nav id="navbar" class="navbar order-last order-lg-0">
 			<ul>
 			  <li><a class="nav-link scrollto active" href="#hero">Home</a></li>
 			  <li><a class="nav-link scrollto" href="#about">About</a></li>
 			  <li><a class="nav-link scrollto" href="#services">Services</a></li>
-			  <li><a class="nav-link scrollto " href="#portfolio">Portfolio</a></li>
 			  <li><a class="nav-link scrollto" href="#team">Team</a></li>
 			  <li><a class="nav-link scrollto" href="#contact">Contact</a></li>
 			</ul>
@@ -71,7 +70,7 @@
 		</div>
 	  </div>
 
-     
+
 	  <div class="row gy-4 mt-5 justify-content-center" data-aos="zoom-in" data-aos-delay="250">
         <div class="col-xl-2 col-md-4">
           <div class="icon-box">
@@ -341,7 +340,7 @@
 
 		  <div class="col-lg-4 col-md-6">
 			<div class="footer-info">
-			  <h3>Contact Us<span> !</span></h3>
+			  <h3 id="contact">Contact Us<span> !</span></h3>
 			  <p>
 				<strong>Phone:</strong> +1 5589 55488 55<br>
 			  </p>
